--- a/g5Mindr/g5Mindr/ViewControllers/ConditionViewController/g5DayOfTheWeekViewController.xib
+++ b/g5Mindr/g5Mindr/ViewControllers/ConditionViewController/g5DayOfTheWeekViewController.xib
@@ -18,11 +18,11 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="0Tv-es-NFw">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsMultipleSelection="YES" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="30" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pSi-fa-vIR">
-                    <rect key="frame" x="0.0" y="64" width="600" height="210"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pSi-fa-vIR">
+                    <rect key="frame" x="0.0" y="64" width="600" height="308"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="210" id="WDb-u3-AJM"/>
+                        <constraint firstAttribute="height" constant="308" id="WDb-u3-AJM"/>
                     </constraints>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="VwS-yh-XOR"/>
